[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/behaviours/graphics/RandomRotationOnReady.gd" type="Script" id=1]
[ext_resource path="res://src/pickups/Branch1.png" type="Texture" id=2]
[ext_resource path="res://src/pickups/Pickup.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Pickup" type="Area2D"]
collision_layer = 16
collision_mask = 16
input_pickable = false
script = ExtResource( 3 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Shape"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Duration" type="Timer" parent="."]
one_shot = true

[node name="Despawn" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
